--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,12 @@ python-pptx==1.0.2
 uvicorn==0.34.0
 python-multipart==0.0.20
 python-dotenv==1.0.0
+dotenv==0.9.9
+pandas==2.2.3
+openpyxl==3.1.5
+tzdata==2025.2
+pytz==2025.2
+numpy==2.2.4
+python-dateutil==2.9.0.post0
+et-xmlfile==2.0.0
+six==1.17.0
