--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,6 +48,7 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "nanoid": "^5.1.5",
     "next-themes": "^0.3.0",
     "pptxgenjs": "^3.12.0",
     "react": "^18.3.1",
@@ -56,6 +58,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "reactflow": "^11.11.4",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
