--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .env
 */.env
+.vscode
 
 # FRONTEND
 frontend/node_modules
@@ -12,3 +13,4 @@ backend/venv/
 backend/.env
 backend/.env
 backend/.venv
+
