--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.3",
@@ -65,6 +66,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "vaul": "^0.9.3",
+    "wouter": "^3.6.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
