--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.41.0",
+    "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
