--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,9 @@ backend/.env
 backend/.env
 backend/.venv
 backend/__pycache__
+*/__pycache__
+*/*/__pycache__
+*/*/*/__pycache__
+*/*/*/*/__pycache__
+*/*/**//*/__pycache__
 
