--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,116 @@
 aiofiles==24.1.0
 fastapi==0.115.12
 openai==1.68.2
-python-pptx==1.0.2
-uvicorn==0.34.0
-python-multipart==0.0.20
-python-dotenv==1.0.0
-dotenv==0.9.9
-pandas==2.2.3
 openpyxl==3.1.5
-tzdata==2025.2
-pytz==2025.2
-numpy==2.2.4
 python-dateutil==2.9.0.post0
-et-xmlfile==2.0.0
+sqlalchemy==2.0.40
+python-magic==0.4.27
+psycopg2-binary==2.9.10
+jwt==1.3.1
+bcrypt==4.3.0
+google==3.0.0
+google-auth==2.38.0
+requests==2.31.0
+PyJWT==2.8.0
+email-validator==2.0.0
+alembic==1.15.1
+
+annotated-types==0.7.0
+
+anyio==4.9.0
+
+cachetools==5.5.2
+
+certifi==2025.1.31
+
+charset-normalizer==3.4.1
+
+click==8.1.8
+
+distro==1.9.0
+
+dnspython==2.7.0
+
+dotenv==0.9.9
+
+ecdsa==0.19.1
+
+et_xmlfile==2.0.0
+
+exceptiongroup==1.2.2
+
+filelock==3.13.1
+
+fsspec==2024.6.1
+
+greenlet==3.1.1
+
+h11==0.14.0
+
+httpcore==1.0.7
+
+httpx==0.28.1
+
+idna==3.10
+
+Jinja2==3.1.4
+
+jiter==0.9.0
+
+lxml==5.3.1
+
+Mako==1.3.9
+
+MarkupSafe==2.1.5
+
+mpmath==1.3.0
+
+networkx==3.3
+
+numpy==2.2.4
+
+pandas==2.2.3
+
+pillow==11.1.0
+
+pyasn1==0.4.8
+
+pyasn1_modules==0.4.2
+
+pydantic==2.10.6
+
+pydantic_core==2.27.2
+
+python-dotenv==1.0.0
+
+python-jose==3.4.0
+
+python-multipart==0.0.20
+
+python-pptx==1.0.2
+
+pytz==2025.2
+
+rsa==4.9
+
 six==1.17.0
+
+sniffio==1.3.1
+
+starlette==0.46.1
+
+sympy==1.13.1
+
+torch==2.1.2+cpu
+
+tqdm==4.67.1
+
+typing_extensions==4.13.0
+
+tzdata==2025.2
+
+urllib3==2.3.0
+
+uvicorn==0.34.0
+
+XlsxWriter==3.2.2
